tests/machine/x/python/dataset_where_filter.py
# Generated by Mochi compiler v0.10.25 on 2025-07-14T02:58:34Z
from __future__ import annotations

import dataclasses

@dataclasses.dataclass
class Adult:
	name: str
	age: int
	is_senior: bool

@dataclasses.dataclass
class Person:
	name: str
	age: int

people = [Person(name="Alice", age=30), Person(name="Bob", age=15), Person(name="Charlie", age=65), Person(name="Diana", age=45)]
adults = [ Adult(name=person.name, age=person.age, is_senior=(person.age >= 60)) for person in people if (person.age >= 18) ]
print("--- Adults ---")
for person in adults:
	print(f"{person.name} is {person.age} {(" (senior)" if person.is_senior else "")}")
